manifests/check-pv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: check-pv
  namespace: wordpress-app
spec:
  restartPolicy: Never
  volumes:
    - name: mariadb-data
      persistentVolumeClaim:
        claimName: mariadb-pvc
  containers:
    - name: check
      image: busybox
      command: ["sh", "-c", "ls -ld /var/lib/mysql || mkdir -p /var/lib/mysql && ls -ld /var/lib/mysql"]
      volumeMounts:
        - mountPath: /var/lib/mysql
          name: mariadb-data
