manifests/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: wordpress-app
spec:
  selector:
    app: mariadb
  ports:
    - name: mysql
      port: 3306        # Puerto que expone el servicio
      targetPort: 3306  # Puerto en el contenedor de MariaDB
  type: ClusterIP
